# fera

./: .gitignore  BUILD_STATUS.md  CHANGES_SUMMARY.md  COMPLETION_REPORT.md  Cargo.toml  FERA_SPEC.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  README_FIRST.md  SETUP_GUIDE.md  fera.toml
docs/: CONTRIBUTING.md  ROADMAP.md
examples/: array_sum.fera  error_test.fera  fibonacci.fera  hello.fera  pointers.fera  showcase.fera  stdlib_test.fera  struct_example.fera
src/: main.rs
src/ast/: mod.rs
src/cli/: build.rs  check.rs  clean.rs  doc.rs  fmt.rs  mod.rs  run.rs  test.rs
src/codegen/: mod.rs
src/error/: mod.rs
src/hir/: mod.rs
src/lexer/: mod.rs  preprocessor.rs  token.rs
src/parser/: mod.rs
src/types/: mod.rs
stdlib/core/: core.h  math.c  print.c  string.c
stdlib/embedded/: stm32.h
stdlib/hosted/: stdio.h
tests/integration/: test_basic.rs
